Demo13/env/prd/aws_security_group.tf
/*

resource "aws_security_group" "demo_sg" {
    name    ="sample-sg"

    ingress {
        from_port       = 8080
        to_port         = 8080
        protocol        = "tcp"
        cidr_blocks     = ["0.0.0.0/0"]
    }

    ingress {
        from_port       = 443
        to_port         = 443
        protocol        = "tcp"
        cidr_blocks     = ["0.0.0.0/0"]
    }

    ingress {
        from_port       = 80
        to_port         = 80
        protocol        = "tcp"
        cidr_blocks     = ["0.0.0.0/0"]
    }

    ingress {
        from_port       = 22
        to_port         = 22
        protocol        = "tcp"
        cidr_blocks     = ["0.0.0.0/0"]
    }

    ingress {
        from_port       = 21
        to_port         = 21
        protocol        = "tcp"
        cidr_blocks     = ["0.0.0.0/0"]
    }    
}
*/
resource "aws_security_group" "demo_sg" {
    name    ="dynamic-sg"

    dynamic "ingress" {
        for_each = var.sg_ingress_ports
        content {
            from_port    = ingress.value
            to_port      = ingress.value
            protocol     = "tcp"
            cidr_blocks  = ["0.0.0.0/0"]
        }
    }

    dynamic "egress" {
        for_each = var.sg_egress_ports
        content {
            from_port    = egress.value
            to_port      = egress.value
            protocol     = "tcp"
            cidr_blocks  = ["0.0.0.0/0"]
        }
    }
}
